# esp32-wifi-manager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  embed_files.txt  sonar-project.properties
.github/workflows/: code-style.yml  google-tests.yml  sonar-scan.yml
examples/default_demo/: CMakeLists.txt  sdkconfig
examples/default_demo/main/: user_main.c
scripts/: sonar_scan.sh
src/: access_points_list.c  access_points_list.h  ap_ssid.c  ap_ssid.h  code.js  dns_server.c  dns_server.h  http_req.c  http_req.h  http_server.c  http_server_accept_and_handle_conn.c  http_server_accept_and_handle_conn.h  http_server_auth.c  http_server_auth.h  http_server_auth_digest.c  http_server_auth_digest.h  http_server_auth_ruuvi.c  http_server_auth_ruuvi.h  http_server_auth_type.c  http_server_ecdh.c  http_server_ecdh.h  http_server_handle_req.c  http_server_handle_req.h  http_server_handle_req_delete_auth.c  http_server_handle_req_delete_auth.h  http_server_handle_req_get_auth.c  http_server_handle_req_get_auth.h  http_server_handle_req_post_auth.c  http_server_handle_req_post_auth.h  http_server_mutex.c  http_server_mutex.h  http_server_resp.c  json.c  json.h  json_access_points.c  json_access_points.h  json_ip_info.c  json_ip_info.h  json_network_info.c  json_network_info.h  (+27 more)
src/include/: http_server.h  http_server_auth_type.h  http_server_resp.h  sta_ip.h  wifi_manager.h  wifi_manager_defs.h  wifiman_md5.h
tests/: CMakeLists.txt
tests/lwip/: CMakeLists.txt
tests/test_access_points_list/: test_access_points_list.cpp
tests/test_ap_ssid/: CMakeLists.txt
tests/test_http_req/: test_http_req.cpp
tests/test_http_server_handle_req_get_auth/: CMakeLists.txt  test_http_server_handle_req_get_auth.cpp
tests/test_http_server_resp/: CMakeLists.txt  test_http_server_resp.cpp
tests/test_json/: CMakeLists.txt  test_1.cpp  test_json.cpp  test_json_ip_info.cpp
tests/test_json_access_points/: CMakeLists.txt  test_json_access_points.cpp
tests/test_json_access_points/include/: esp_wifi_types.h
tests/test_json_ip_info/: CMakeLists.txt
tests/test_json_network_info/: CMakeLists.txt  test_json_network_info.cpp
tests/test_sta_ip_safe/: CMakeLists.txt  test_sta_ip_safe.cpp
tests/test_sta_ip_unsafe/: CMakeLists.txt  esp_netif_lwip.c  test_sta_ip_unsafe.cpp
tests/test_wifiman_cfg_blob_convert/: CMakeLists.txt  sdkconfig.h  test_wifiman_cfg_blob_convert.cpp
